# NasaRmc2019

./: .gitignore  .gitmodules  .travis.yml  README.md  apt_install_dependencies.sh  install_cartographer_and_dependencies.sh  install_everything.sh  install_librealsense.sh  install_opencv_and_contrib.sh  local_start_robot.sh  realsense_record.sh  setupCAN.sh  start_mission_control.sh  start_robot.sh  start_robot_local.sh
src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/catkin_generated/installspace/: .rosinstall  local_setup.sh  setup.sh
src/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_aruco/: CMakeLists.txt  CTestTestfile.cmake  Makefile  board.data  cmake_install.cmake
src/tfr_aruco/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/tfr_aruco/cmake/: tfr_aruco-genmsg-context.py  tfr_aruco-genmsg.cmake
src/tfr_aruco/launch/: test_aruco.launch
src/tfr_aruco/src/: aruco_action_server.cpp  generatedMarker.h  tfr_aruco_example_client.cpp
src/tfr_can/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_can/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/tfr_can/src/: create_ros_topics_for_can_nodes.cpp
src/tfr_control/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/tfr_control/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/tfr_control/config/: controllers.yaml  encoder_limits.yaml
src/tfr_control/launch/: control.launch  drivebase.launch  simulation_control.launch
src/tfr_control/src/: arm_action_server.cpp  control.cpp  drivebase_publisher.cpp  robot_interface.cpp  rp_control.cpp
src/tfr_description/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_description/catkin_generated/: package.cmake  (+2 more)
src/tfr_dumping/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_executive/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_gazebo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_gazebo_arm_moveit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_launch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_localization/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_mining/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  setup.py
src/tfr_mission_control/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_monitoring/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  setup.py
src/tfr_monitoring/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/tfr_monitoring/catkin_generated/installspace/: tfr_monitoring.pc  tfr_monitoringConfig.cmake
src/tfr_monitoring/launch/: monitoring.launch
src/tfr_monitoring/src/: monitoring_actuator_velocity.py  monitoring_arm_velocity.cpp  monitoring_battery.cpp  read_arm_torque.cpp
src/tfr_moveit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_navigation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_read_torque/: CMakeLists.txt  package.xml
src/tfr_read_torque/launch/: read_torque.launch
src/tfr_read_torque/src/: read_torque.cpp
src/tfr_sensor/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_utilities/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tfr_visualization/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/urdf_files/: CMakeLists.txt  package.xml
src/urdf_files/config/: joint_names_2020 Master File_software.yaml
src/urdf_files/launch/: display.launch  gazebo.launch
src/urdf_files/meshes/: Turntable_Link.STL
src/urdf_files/urdf/: urdf_files.urdf
(+294 files in other folders)
