<?xml version="1.0"?>
<package format="2">
  <name>tfr_monitoring</name>
  <version>0.0.0</version>
  <description>The tfr_monitoring package</description>

  <maintainer email="bwolf1@uw.edu">Braden</maintainer>

  <license>BSD</license>

  <author email="bwolf1@uw.edu">Braden Wolf</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <depend>tfr_can</depend>
  <depend>std_msgs</depend>

</package>
