<package format="2">
	<name>tfr_read_torque</name>
	<version>0.0.0</version>
	<description>This is a package to learn ROS</description>
	<maintainer email="vladimirkupryukhin@gmail.com">Vlad</maintainer>

	<license>BSD</license>

	<depend>roscpp</depend>
	<depend>tfr_can</depend>
	<depend>std_msgs</depend>
	<buildtool_depend>catkin</buildtool_depend>
	

</package>